--- a/index.css
+++ b/index.css
@@ -1,73 +1,107 @@
 body {
-  background-color: #bdc3c7;
-  margin: 0;
-  font-family: Roboto;
+    background-color: #bdc3c7;
+    margin: 0;
+    font-family: Roboto;
 }
 
 #app-container {
-  width: 100%;
-  overflow: hidden;
+    width: 100%;
+    overflow: hidden;
 }
 
 #app-header {
-  width: 100%;
-  height: 10vh;
-  position: fixed;
-  background-color: #2ecc71;
-  text-align: center;
+    width: 100%;
+    height: 10vh;
+    position: fixed;
+    background-color: #2ecc71;
+    text-align: center;
 }
 
 #app-header h1 {
-  line-height: 10vh;
-  margin: 0;
-  color: white;
+    line-height: 10vh;
+    margin: 0;
+    color: white;
 }
 
 #app-header h1.danger {
-  color: red;
+    color: red;
 }
 
 #app-body {
-  padding-top: 15vh;
-  width: 80%;
-  margin: 0 auto;
-  min-height: 75vh;
+    padding-top: 15vh;
+    width: 80%;
+    margin: 0 auto;
+    min-height: 75vh;
 }
 
 #app-footer {
-  width: 100%;
-  min-height: 10vh;
+    width: 100%;
+    min-height: 10vh;
 }
 
 #app-footer p {
-  margin: 0 auto;
-  width: 40%;
-  text-align: center;
-  padding-top: 30px;
-  border-top: 1px solid #7f8c8d;
+    margin: 0 auto;
+    width: 40%;
+    text-align: center;
+    padding-top: 30px;
+    border-top: 1px solid #7f8c8d;
 }
 
 .tv-show {
-  width: 100%;
-  overflow: hidden;
-  padding: 16px;
-  background-color: white;
-  margin-bottom: 16px;
+    width: 100%;
+    overflow: hidden;
+    padding: 16px;
+    background-color: white;
+    margin-bottom: 16px;
+    box-sizing: border-box;
+    box-shadow: 3px 3px 5px gray;
 }
 
 .tv-show:hover {
-  background-color: #ecf0f1;
+    background-color: #ecf0f1;
+}
+
+.tv-show .img-container {
+    width: 20%;
 }
 
 .tv-show img {
-  max-height: 150px;
-  padding: 16px 0 0 16px;
+    max-width: 100%;
 }
 
 .tv-show .info {
-  padding-left: 20px;
+    width: 75%;
 }
 
 .left {
-  float: left;
+    float: left;
+}
+
+.right {
+    float: right;
+}
+
+#app-body .search-form {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 22px;
+}
+
+#app-body .search-form input[type="text"] {
+    padding: 12px 16px;
+    border-radius: 6px;
+    width: 70%;
+    font-size: 16px;
+}
+
+#app-body .search-form button {
+    font-family: Roboto;
+    font-size: 16px;
+    color: white;
+    background-color: #06c241;
+    padding: 12px 16px;
+    border-radius: 6px;
+    width: 20%;
 }
