--- a/index.css
+++ b/index.css
@@ -15,6 +15,7 @@ body {
     position: fixed;
     background-color: #2ecc71;
     text-align: center;
+    z-index: 10;
 }
 
 #app-header h1 {
@@ -55,6 +56,7 @@ body {
     margin-bottom: 16px;
     box-sizing: border-box;
     box-shadow: 3px 3px 5px gray;
+    position: relative;
 }
 
 .tv-show:hover {
@@ -72,6 +74,22 @@ body {
 .tv-show .info {
     font-size: 14px;
     width: 75%;
+}
+
+.tv-show button.like {
+    background: transparent;
+    border: 0;
+    outline: 0;
+    position:absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 22px;
+    cursor: pointer;
+}
+
+.tv-show button.like img {
+    max-width: 24px;
+    max-height: 24px;
 }
 
 .left {
